XPLANBOX-3963 - implemented comparison; separated lexer nd parser